@@ -4,6 +4,7 @@ import com.desertskyrangers.flightdeck.core.model.User;
 import io.jsonwebtoken.*;
 import io.jsonwebtoken.io.Decoders;
 import io.jsonwebtoken.security.Keys;
+import jakarta.annotation.PostConstruct;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -12,8 +13,7 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Component;
 
-import jakarta.annotation.PostConstruct;
-import java.security.Key;
+import javax.crypto.SecretKey;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Date;
@@ -24,7 +24,7 @@ import java.util.stream.Collectors;
 @Slf4j
 public class JwtTokenProvider {
 
-	private Key key;
+	private SecretKey key;
 
 	private long tokenValidityInMilliseconds;
 
@@ -42,8 +42,6 @@ public class JwtTokenProvider {
 	@Value( "${security.authentication.jwt.token-validity-in-seconds-for-remember-me}" )
 	private Integer jwtRememberedTokenValidityInSeconds;
 
-	public JwtTokenProvider() {}
-
 	@PostConstruct
 	public void init() {
 		byte[] keyBytes = Decoders.BASE64.decode( jwtSecret );
@@ -57,16 +55,13 @@ public class JwtTokenProvider {
 	}
 
 	public Map<String, Object> parse( String token ) {
-		return Jwts.parserBuilder().setSigningKey( key ).build().parseClaimsJws( token ).getBody();
+		return Jwts.parser().verifyWith( key ).build().parseSignedClaims( token ).getPayload();
 	}
 
 	public Authentication getAuthentication( String token ) {
-		Claims claims = Jwts.parserBuilder().setSigningKey( key ).build().parseClaimsJws( token ).getBody();
+		Claims claims = Jwts.parser().verifyWith( key ).build().parseSignedClaims( token ).getPayload();
 
-		Collection<? extends GrantedAuthority> authorities = Arrays
-			.stream( String.valueOf( claims.get( JwtToken.AUTHORITIES_CLAIM_KEY ) ).split( "," ) )
-			.map( SimpleGrantedAuthority::new )
-			.collect( Collectors.toList() );
+		Collection<? extends GrantedAuthority> authorities = Arrays.stream( String.valueOf( claims.get( JwtToken.AUTHORITIES_CLAIM_KEY ) ).split( "," ) ).map( SimpleGrantedAuthority::new ).toList();
 
 		org.springframework.security.core.userdetails.User principal = new org.springframework.security.core.userdetails.User( claims.getSubject(), "", authorities );
 
@@ -74,12 +69,12 @@ public class JwtTokenProvider {
 	}
 
 	public String getUserId( String token ) {
-		return String.valueOf( parse( token).get( JwtToken.USER_ID_CLAIM_KEY ) );
+		return String.valueOf( parse( token ).get( JwtToken.USER_ID_CLAIM_KEY ) );
 	}
 
 	public boolean validateToken( String token ) {
 		try {
-			Jwts.parserBuilder().setSigningKey( key ).build().parse( token );
+			Jwts.parser().verifyWith( key ).build().parse( token );
 			return true;
 		} catch( io.jsonwebtoken.security.SecurityException | MalformedJwtException exception ) {
 			log.info( "Invalid JWT signature." );
@@ -113,14 +108,7 @@ public class JwtTokenProvider {
 		Date validity = new Date( timestamp + tokenValidityInMilliseconds );
 		if( remember ) validity = new Date( timestamp + tokenValidityInMillisecondsForRememberMe );
 
-		return Jwts
-			.builder()
-			.claim( JwtToken.USER_ID_CLAIM_KEY, userId )
-			.setSubject( subject )
-			.claim( JwtToken.AUTHORITIES_CLAIM_KEY, authorities )
-			.setExpiration( validity )
-			.signWith( key, SignatureAlgorithm.HS512 )
-			.compact();
+		return Jwts.builder().claim( JwtToken.USER_ID_CLAIM_KEY, userId ).subject( subject ).claim( JwtToken.AUTHORITIES_CLAIM_KEY, authorities ).expiration( validity ).signWith( key ).compact();
 	}
 
 }
